# seed-finder

./: Cargo.toml  README.md  default.nix  shell.nix
nix/: pkgs.nix  sources.json
src/: main.rs
