[package]
name = "seed-finder"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = "0.28.2"
bitcoin = "0.29.2"
clap = { version = "4.4.3", features = ["derive", "env"] }
futures = "0.3.25"
itertools = "0.10.5"
lazy_static = "1.4.0"
tiny-bip39 = "1.0.0"
tokio = { version = "1.24.1", features = ["full"] }
